force-app/main/default/objects/Train_Shedule__c/Train_Shedule__c.object-meta.xml
<CustomObject>
    <label>Train Shedule</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>TrainSheduleNum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Train Shedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>