force-app/main/default/objects/Train_Shedule__c/fields/Bedroll_Required__c.field-meta.xml
<CustomField>
    <fullName>Bedroll_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bedroll Required</label>
    <type>Checkbox</type>
</CustomField>