force-app/main/default/objects/Train_Shedule__c/fields/Boarding_Station__c.field-meta.xml
<CustomField>
    <fullName>Boarding_Station__c</fullName>
    <label>Boarding Station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>