force-app/main/default/objects/Train_Shedule__c/fields/Booking_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Open_Date__c</fullName>
    <formula>IF( Is_Talkal__c == TRUE ,  Date_of_Journey__c - 1 ,  Date_of_Journey__c - 120)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Open Date</label>
    <type>Date</type>
</CustomField>