force-app/main/default/objects/Train_Shedule__c/fields/Date_of_Journey__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Journey__c</fullName>
    <label>Date of Journey</label>
    <required>true</required>
    <type>Date</type>
</CustomField>