force-app/main/default/objects/Train_Shedule__c/fields/Destination_Station__c.field-meta.xml
<CustomField>
    <fullName>Destination_Station__c</fullName>
    <label>Destination Station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>