force-app/main/default/objects/Train_Shedule__c/fields/Is_Ac__c.field-meta.xml
<CustomField>
    <fullName>Is_Ac__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ac Ticket</label>
    <type>Checkbox</type>
</CustomField>