force-app/main/default/objects/Train_Shedule__c/fields/Is_Talkal__c.field-meta.xml
<CustomField>
    <fullName>Is_Talkal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Talkal</label>
    <type>Checkbox</type>
</CustomField>