force-app/main/default/objects/Train_Shedule__c/fields/Name_of_Person__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Train Shedule</relationshipLabel>
    <relationshipName>Train_Shedule</relationshipName>
    <type>Lookup</type>
</CustomField>