force-app/main/default/objects/Train_Shedule__c/fields/Planned_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Booking_Date__c</fullName>
    <label>Planned Booking Date</label>
    <type>Date</type>
</CustomField>