force-app/main/default/objects/Train_Shedule__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <label>PNR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>