force-app/main/default/objects/Train_Shedule__c/fields/Status_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Booking__c</fullName>
    <label>Status of Booking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>