force-app/main/default/objects/Train_Shedule__c/fields/Train_Name_Code__c.field-meta.xml
<CustomField>
    <fullName>Train_Name_Code__c</fullName>
    <label>Train Name/Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>