force-app/main/default/objects/Train_Shedule__c/validationRules/If_Bedroll_without_AC.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Bedroll_without_AC</fullName>
    <active>true</active>
    <errorConditionFormula>Is_Ac__c == False &amp;&amp;  Bedroll_Required__c == True</errorConditionFormula>
    <errorDisplayField>Bedroll_Required__c</errorDisplayField>
    <errorMessage>Bedrolls will only be given to AC Tickets</errorMessage>
</ValidationRule>