force-app/main/default/objects/Train_Shedule__c/validationRules/If_booking_greater_than_journey_date.validationRule-meta.xml
<ValidationRule>
    <fullName>If_booking_greater_than_journey_date</fullName>
    <active>true</active>
    <errorConditionFormula>Planned_Booking_Date__c &gt;= Date_of_Journey__c</errorConditionFormula>
    <errorMessage>Booking Date should be before Journey Date</errorMessage>
</ValidationRule>